locales and module settings

--- a/locale/en/pu-supply-chain.cfg
+++ b/locale/en/pu-supply-chain.cfg
@@ -1,5 +1,334 @@
 [autoplace-control-names]
+amm=Ammonia
+ar=Argon
+f=Flouride
+h=Hydrogen
+he=Helium
+he3=Helium-3 Isotope
+n=Nitrogen
+ne=Neon
+h2o=Water
+bts=Bacterial Tungsten Solution
+les=Liquid Einsteinium
+alo=Aluminium Ore
+auo=Gold Ore
+ber=Beryl Crystals
+cli=Caliche Rock
+cuo=Copper Ore
+feo=Iron Ore
+gal=Galerite Rock
+hal=Halite Crystals
+lst=Limestone
+mag=Magnetite
+mg=Magnesium
+s=Sulfur
+sio=Silicon Ore
+tai=Tantalite Rock
+tio=Titanium Ore
+ts=Tectosilisite
+zir=Zircon Crystals
 
 [entity-name]
+pu-belt=Transport belt
+pu-underground-belt=Underground belt
+pu-splitter=Belt splitter
+pu-inserter=Inserter
+adm=Administration Center
+aml=Advanced Material Lab
+apf=Appliances Factory
+asm=High-Power Blast Furnace
+bmp=Basic Materials Plant
+cfl=Corporate FTL Laboratory
+chp=Chemical Plant
+cim=Corporate Immortality Center
+clf=Textile Manufacturing
+clr=Cleanroom
+cm=Core Module
+cog=Chamber of Global Commerce
+col=Collector
+cor=Corporation Headquarters
+cte=Corporate Terraformer
+eep=Einsteinium Enrichment
+elp=Electronics Plant
+ext=Extractor
+ff=Fermenter
+fp=Food Processor
+frm=Farmstead
+fs=Metalist Studio
+gf=Glass Furnace
+hb1=Pioneer Habitation
+hb2=Settler Habitation
+hb3=Technician Habitation
+hb4=Engineer Habitation
+hb5=Scientist Habitation
+hbb=Barracks
+hbc=Communal Abode
+hbl=Luxury Residence
+hbm=Management Domicile
+hyf=Hydroponics Farm
+inc=Incinerator
+ivp=In-Vitro Plant
+lbo=Laboratory
+lm=Local Market
+mca=Medium Components Assembly
+orc=Orchard
+pol=Polymer Plant
+pp1=Prefab Plant MK1
+pp2=Prefab Plant MK2
+pp3=Prefab Plant MK3
+pp4=Prefab Plant MK4
+ppf=3D Printer
+ref=Refinery
+rig=Rig
+sca=Small Components Assembly
+sd=Software Development
+sl=Software Labs
+sme=Smelter
+sto=Storage Facility
+tnp=Technetium Processing
+wel=Welding Plant
+wpl=Weaving Plant
+amm=Ammonia deposit
+ar=Argon deposit
+f=Flouride deposit
+h=Hydrogen deposit
+he=Helium deposit
+he3=Helium-3 Isotope deposit
+n=Nitrogen deposit
+ne=Neon deposit
+h2o=Water deposit
+bts=Bacterial Tungsten Solution deposit
+les=Liquid Einsteinium deposit
+alo=Aluminium Ore deposit
+auo=Gold Ore deposit
+ber=Beryl Crystals deposit
+cli=Caliche Rock deposit
+cuo=Copper Ore deposit
+feo=Iron Ore deposit
+gal=Galerite Rock deposit
+hal=Halite Crystals deposit
+lst=Limestone deposit
+mag=Magnetite deposit
+mg=Magnesium deposit
+s=Sulfur deposit
+sio=Silicon Ore deposit
+tai=Tantalite Rock deposit
+tio=Titanium Ore deposit
+ts=Tectosilisite deposit
+zir=Zircon Crystals deposit
+
 
 [item-name]
+alg=Protein-Rich Algae
+bea=Protein-Rich Beans
+caf=Caffeinated Beans
+gra=Grapes
+grn=High-Carb Grains
+hcp=Hydrocarbon Plants
+her=Spicy Herbs
+hop=Flowery Hops
+mai=High-Carb Maize
+mtp=Meat Tissue Patties
+nut=Triglyceride Nuts
+ppa=Protein Paste
+rco=Raw Cotton Fiber
+rsi=Raw Silk Strains
+veg=Triglyceride Fruits
+ast=aluminiumTitaniumAlloy
+bgo=goldIronAlloy
+bro=copperAluminiumAlloy
+bti=aluminiumIronAlloy
+fet=ironTitaniumAlloy
+rgo=goldCopperAlloy
+dw=drinkingWater
+exo=settlerClothing
+fim=engineerFood
+hms=technicianClothing
+hss=engineerClothing
+lc=scientistClothing
+mea=scientistFood
+med=technicianHealth
+ove=pioneerClothing
+pda=engineerTools
+pt=settlerTools
+rat=rations
+scn=technicianTools
+ws=scientistTools
+bac=bacteria
+bl=breathableLiquid
+ble=bleach
+cst=cryogenicFluid
+ddt=pesticides
+flx=flux
+ind=indigo
+lcr=liquidCrystals
+nr=nanoResin
+ns=nutrientSolution
+tcl=tclAcid
+thf=thermoFluid
+epo=epoxy
+gl=translucentMaterial
+inf=insuFoam
+mcg=mineralConstructionGranulate
+mtc=megaTubeCoating
+ncs=nanoCarbonSheeting
+nfi=nanoFiber
+ng=nanoGlass
+rg=reinforcedTranslucentMaterial
+sea=sealant
+aef=aerostatFoundation
+air=airScrubber
+fc=flowControl
+flp=fluidPiping
+gc=gasContainer
+gv=gasVent
+mgc=magneticFloor
+mhl=metalHalideLamp
+psh=pressureShielding
+rsh=radiationShielding
+tcs=technetiumStabilizers
+tru=truss
+tsh=thermalShielding
+abh=advancedBulkhead
+ade=advancedDeckElements
+ase=advancedStructuralElements
+ata=advancedWindow
+bbh=basicBulkhead
+bde=basicDeckElements
+bse=basicStructuralElements
+bta=basicWindow
+hse=hardenedStructuralElements
+lbh=lightweightBulkhead
+lde=lightweightDeckElements
+lse=lightweightStructuralElements
+lta=lightweightWindow
+rbh=reinforcedBulkhead
+rde=reinforcedDeckElements
+rse=reinforcedStructuralElements
+rta=reinforcedWindow
+awf=waterFilter
+bmf=mainFrameBlank
+bws=workstationBlank
+dis=twoDimensionalDisplay
+hd=holographicDisplay
+hpc=touchDeviceBlank
+pa=parabolicAntenna
+sar=sensorArray
+cd=touchScreen
+ebs=embeddedSystem
+fan=coolingFan
+mb=motherBoard
+mpc=microProcessor
+pcb=printedCircuitBoard
+ram=memoryBank
+rom=nonVolatileMemory
+sen=sensor
+soc=systemOnaChip
+sp=solarPanel
+tpu=tensorProcessingUnit
+bco=copperConnectors
+bgc=blueGoldConnectors
+cap=capacitor
+hcc=redGoldConnectors
+ldi=laserDiode
+mfk=fastenerKitMedium
+mwf=waferMedium
+sfk=fastenerKitSmall
+swf=waferSmall
+trn=transistor
+cc=climateController
+cru=cryoUnit
+ffc=ftlFieldController
+lis=lifeSupportSystem
+tac=targetingComputer
+wr=waterRecycler
+be=beryllium
+c=carbon
+ca=calcium
+cl=chlorine
+es=einsteinium
+i=iodine
+na=sodium
+ta=tantalum
+tc=technetium
+w=wolfram
+zr=zirconium
+ff=ftlFuel
+sf=stlFuel
+amm=ammonia
+ar=argon
+f=fluorine
+h=hydrogen
+he=helium
+he3=helium3
+n=nitrogen
+ne=neon
+o=oxygen
+bts=tungstenResource
+h2o=water
+les=liquidEinsteinium
+ale=technicianLuxuryDrink
+cof=pioneerLuxuryDrink
+gin=engineerLuxuryDrink
+kom=settlerLuxuryDrink
+nst=scientistLuxuryHealth
+pwo=pioneerLuxuryClothing
+rep=settlerLuxuryTools
+sc=technicianLuxuryHealth
+vg=engineerLuxuryHealth
+win=scientistLuxuryDrink
+al=aluminium
+au=gold
+cu=copper
+fe=iron
+si=silicon
+stl=steel
+ti=titanium
+ber=beryl
+cli=caliche
+gal=galerite
+hal=halite
+lst=limestone
+mag=magnetite
+mg=magnesium
+s=sulfur
+tai=tantalite
+tco=technetiumOxide
+ts=tectosilisite
+zir=zircon
+alo=aluminiumOre
+auo=goldOre
+cuo=copperOre
+feo=ironOre
+sio=siliconOre
+tio=titaniumOre
+dcl=largeDeviceCover
+dcm=mediumDeviceCover
+dcs=smallDeviceCover
+pe=polyEthylene
+pg=polymerGranulate
+psl=largePlasticsBoard
+psm=mediumPlasticsBoard
+pss=smallPlasticsBoard
+nv1=navigation1
+nv2=navigation2
+cnn=convolutionalNeuralNetwork
+da=dataAnalyzer
+dd=distributedDatabase
+dv=dataVisualizer
+fnn=feedforwardNeuralNetwork
+ld=localDatabase
+nf=networkingFramework
+os=operatingSystem
+ra=ratingAlgorithm
+rnn=recurrentNeuralNetwork
+sa=searchAlgorithm
+sal=sortingAlgorithm
+snm=universeMap
+wai=weakArtificalIntelligence
+wm=windowManager
+cot=cottonProcessed
+kv=kevlar
+nl=nylon
+sil=silkProcessed
+tk=technoKevlar
