did about half the items

--- a/locale/en/pu-supply-chain.cfg
+++ b/locale/en/pu-supply-chain.cfg
@@ -134,78 +134,78 @@ ppa=Protein Paste
 rco=Raw Cotton Fiber
 rsi=Raw Silk Strains
 veg=Triglyceride Fruits
-ast=aluminiumTitaniumAlloy
-bgo=goldIronAlloy
-bro=copperAluminiumAlloy
-bti=aluminiumIronAlloy
-fet=ironTitaniumAlloy
-rgo=goldCopperAlloy
-dw=drinkingWater
-exo=settlerClothing
-fim=engineerFood
-hms=technicianClothing
-hss=engineerClothing
-lc=scientistClothing
-mea=scientistFood
-med=technicianHealth
-ove=pioneerClothing
-pda=engineerTools
-pt=settlerTools
-rat=rations
-scn=technicianTools
-ws=scientistTools
-bac=bacteria
-bl=breathableLiquid
-ble=bleach
-cst=cryogenicFluid
-ddt=pesticides
-flx=flux
-ind=indigo
-lcr=liquidCrystals
-nr=nanoResin
-ns=nutrientSolution
-tcl=tclAcid
-thf=thermoFluid
-epo=epoxy
-gl=translucentMaterial
-inf=insuFoam
-mcg=mineralConstructionGranulate
-mtc=megaTubeCoating
-ncs=nanoCarbonSheeting
-nfi=nanoFiber
-ng=nanoGlass
-rg=reinforcedTranslucentMaterial
-sea=sealant
-aef=aerostatFoundation
-air=airScrubber
-fc=flowControl
-flp=fluidPiping
-gc=gasContainer
-gv=gasVent
-mgc=magneticFloor
-mhl=metalHalideLamp
-psh=pressureShielding
-rsh=radiationShielding
-tcs=technetiumStabilizers
-tru=truss
-tsh=thermalShielding
-abh=advancedBulkhead
-ade=advancedDeckElements
-ase=advancedStructuralElements
-ata=advancedWindow
-bbh=basicBulkhead
-bde=basicDeckElements
-bse=basicStructuralElements
-bta=basicWindow
-hse=hardenedStructuralElements
-lbh=lightweightBulkhead
-lde=lightweightDeckElements
-lse=lightweightStructuralElements
-lta=lightweightWindow
-rbh=reinforcedBulkhead
-rde=reinforcedDeckElements
-rse=reinforcedStructuralElements
-rta=reinforcedWindow
+ast=Alpha-Spabilized Titanium
+bgo=Blue Gold
+bro=Bronze
+bti=Budget Titanium Replacement
+fet=Ferro-Titanium
+rgo=Red Gold
+dw=Drinking Water
+exo=Exoskeleton Work Suit
+fim=Flavoured Insta-Meal
+hms=HazMat Work Suit
+hss=Smart Space Suit
+lc=AI-Assisted Lab Coat
+mea=Quality Meat Meal
+med=Basic Medical Kit
+ove=Basic Overalls
+pda=Personal Data Assistant
+pt=Power Tools
+rat=Basic Rations
+scn=Multi-Purpose Scanner
+ws=Scientific Work Station
+bac=Helpful Bacteria
+bl=Breathable Liquid
+ble=Desaturation Agent
+cst=Cryogenic Stabilizer
+ddt=DDT Plant Agent
+flx=Flux
+ind=Indigo Colorant
+lcr=Liquid Crystals
+nr=Nano-Enhanced Resin
+ns=Nutrient Solution
+tcl=TCL Acid
+thf=ThermoFluid
+epo=Epoxy Resin
+gl=Glass
+inf=InsuFoam
+mcg=Mineral Construction Granulate
+mtc=MegaTube Coating
+ncs=Nano-Carbon Sheeting
+nfi=Nano Fiber
+ng=Nano-Coated Glass
+rg=Reinforced Glass
+sea=Poly-Sulfite Sealant
+aef=Aerostat Foundation
+air=Air Scrubber
+fc=Flow Control Device
+flp=Fluid Piping
+gc=Gas Container
+gv=Gas Vent
+mgc=Magnetic Ground Cover
+mhl=Metal-Halide Lighting System
+psh=Pressure Shielding
+rsh=Radiation Shielding
+tcs=Stabilized Technetium
+tru=Truss
+tsh=Thermal Shielding
+abh=Advanced Bulkhead
+ade=Advanced Deck Elements
+ase=Advanced Structural Elements
+ata=Advanced Transparent Aperture
+bbh=Basic Bulkhead
+bde=Basic Deck Elements
+bse=Basic Structural Elements
+bta=Basic Transparent Aperture
+hse=Hardened Structural Elements
+lbh=Lightweight Bulkhead
+lde=Lightweight Deck Elements
+lse=Lightweight Structural Elements
+lta=Lightweight Transparent Aperture
+rbh=Reinforced Bulkhead
+rde=Reinforced Deck Elements
+rse=Reinforced Structural Elements
+rta=Reinforced Transparent Aperture
 awf=waterFilter
 bmf=mainFrameBlank
 bws=workstationBlank
