removed from structures from being added, and changed starting resources

--- a/locale/en/pu-supply-chain.cfg
+++ b/locale/en/pu-supply-chain.cfg
@@ -1,3 +1,7 @@
+[item-group-name]
+pu-structures=Colony Structures
+products=Materials
+
 [autoplace-control-names]
 amm=Ammonia
 ar=Argon
@@ -8,6 +12,7 @@ he3=Helium-3 Isotope
 n=Nitrogen
 ne=Neon
 h2o=Water
+o=Oxygen
 bts=Bacterial Tungsten Solution
 les=Liquid Einsteinium
 alo=Aluminium Ore
@@ -29,7 +34,7 @@ ts=Tectosilisite
 zir=Zircon Crystals
 
 [entity-name]
-pu-belt=Transport belt
+pu-transport-belt=Transport belt
 pu-underground-belt=Underground belt
 pu-splitter=Belt splitter
 pu-inserter=Inserter
