--- a/locale/en/pu-supply-chain.cfg
+++ b/locale/en/pu-supply-chain.cfg
@@ -1,3 +1,9 @@
+[maint-gui]
+heading=Colony Statistics
+item-name-header=Item
+item-cost-header=Quantity
+population=Population: __1__ / __2__ / __3__ / __4__ / __5__
+
 [item-group-name]
 pu-structures=Colony Structures
 products=Materials
