tweaks to make it work smoother

--- a/locale/en/pu-supply-chain.cfg
+++ b/locale/en/pu-supply-chain.cfg
@@ -2,7 +2,9 @@
 heading=Colony Statistics
 item-name-header=Item
 item-cost-header=Quantity
+storage-header=Stored
 population=Population: __1__ / __2__ / __3__ / __4__ / __5__
+happiness=Worker Satisfaction: __1__%
 
 [item-group-name]
 pu-structures=Colony Structures
