changed how maintenance works

--- a/locale/en/pu-supply-chain.cfg
+++ b/locale/en/pu-supply-chain.cfg
@@ -1,10 +1,15 @@
+[msg]
+new-colony-created=New colony created
+added-structure=Added structure to colony
+removed-structure=Removed structure from colony
+
 [maint-gui]
 heading=Colony Statistics
 item-name-header=Item
 item-cost-header=Quantity
 storage-header=Stored
 population=Population: __1__ / __2__ / __3__ / __4__ / __5__
-happiness=Worker Satisfaction: __1__%
+happiness=Worker Satisfaction Level: __1__ / 5
 
 [item-group-name]
 pu-structures=Colony Structures
