added morale icons

--- a/locale/en/pu-supply-chain.cfg
+++ b/locale/en/pu-supply-chain.cfg
@@ -2,6 +2,8 @@
 new-colony-created=New colony created
 added-structure=Added structure to colony
 removed-structure=Removed structure from colony
+build-core-module=Build a Core Module first
+too-far-from-colony=Too far from Core Module
 
 [maint-gui]
 heading=Colony Statistics
@@ -137,6 +139,11 @@ zir=Zircon Crystals deposit
 
 
 [item-name]
+module-1=Miserable Workers
+module-2=Unmotivated Workers
+module-3=Content Workers
+module-4=Happy Workers
+module-5=Ecstatic
 alg=Protein-Rich Algae
 bea=Protein-Rich Beans
 caf=Caffeinated Beans
