--- a/locale/en/pu-supply-chain.cfg
+++ b/locale/en/pu-supply-chain.cfg
@@ -231,129 +231,128 @@ rbh=Reinforced Bulkhead
 rde=Reinforced Deck Elements
 rse=Reinforced Structural Elements
 rta=Reinforced Transparent Aperture
-awf=waterFilter
-bmf=mainFrameBlank
-bws=workstationBlank
-dis=twoDimensionalDisplay
-hd=holographicDisplay
-hpc=touchDeviceBlank
-pa=parabolicAntenna
-sar=sensorArray
-cd=touchScreen
-ebs=embeddedSystem
-fan=coolingFan
-mb=motherBoard
-mpc=microProcessor
-pcb=printedCircuitBoard
-ram=memoryBank
-rom=nonVolatileMemory
-sen=sensor
-soc=systemOnaChip
-sp=solarPanel
-tpu=tensorProcessingUnit
-bco=copperConnectors
-bgc=blueGoldConnectors
-cap=capacitor
-hcc=redGoldConnectors
-ldi=laserDiode
-mfk=fastenerKitMedium
-mwf=waferMedium
-sfk=fastenerKitSmall
-swf=waferSmall
-trn=transistor
-cc=climateController
-cru=cryoUnit
-ffc=ftlFieldController
-lis=lifeSupportSystem
-tac=targetingComputer
-wr=waterRecycler
-be=beryllium
-c=carbon
-ca=calcium
-cl=chlorine
-es=einsteinium
-i=iodine
-na=sodium
-ta=tantalum
-tc=technetium
-w=wolfram
-zr=zirconium
-ff=ftlFuel
-sf=stlFuel
-amm=ammonia
-ar=argon
-f=fluorine
-h=hydrogen
-he=helium
-he3=helium3
-n=nitrogen
-ne=neon
-o=oxygen
-bts=tungstenResource
-h2o=water
-les=liquidEinsteinium
-ale=technicianLuxuryDrink
-cof=pioneerLuxuryDrink
-gin=engineerLuxuryDrink
-kom=settlerLuxuryDrink
-nst=scientistLuxuryHealth
-pwo=pioneerLuxuryClothing
-rep=settlerLuxuryTools
-sc=technicianLuxuryHealth
-vg=engineerLuxuryHealth
-win=scientistLuxuryDrink
-al=aluminium
-au=gold
-cu=copper
-fe=iron
-si=silicon
-stl=steel
-ti=titanium
-ber=beryl
-cli=caliche
-gal=galerite
-hal=halite
-lst=limestone
-mag=magnetite
-mg=magnesium
-s=sulfur
-tai=tantalite
-tco=technetiumOxide
-ts=tectosilisite
-zir=zircon
-alo=aluminiumOre
-auo=goldOre
-cuo=copperOre
-feo=ironOre
-sio=siliconOre
-tio=titaniumOre
-dcl=largeDeviceCover
-dcm=mediumDeviceCover
-dcs=smallDeviceCover
-pe=polyEthylene
-pg=polymerGranulate
-psl=largePlasticsBoard
-psm=mediumPlasticsBoard
-pss=smallPlasticsBoard
-nv1=navigation1
-nv2=navigation2
-cnn=convolutionalNeuralNetwork
-da=dataAnalyzer
-dd=distributedDatabase
-dv=dataVisualizer
-fnn=feedforwardNeuralNetwork
-ld=localDatabase
-nf=networkingFramework
-os=operatingSystem
-ra=ratingAlgorithm
-rnn=recurrentNeuralNetwork
-sa=searchAlgorithm
-sal=sortingAlgorithm
-snm=universeMap
+awf=Active Water Filter
+bmf=Basic Mainframe
+bws=Basic Workstation
+dis=Information Display
+hd=Holographic Display
+hpc=Handheld Personal Console
+pa=Parabolic Antenna
+sar=Sensor Array
+cd=Capacitative Display
+ebs=Embedded System
+fan=Active Cooling Device
+mb=Motherboard
+mpc=Micro-Processor
+pcb=Printed Circuit Board
+ram=Memory Bank
+rom=Non-volatile Memory
+sen=Sensor
+soc=System-on-a-Chip
+sp=Solar Panel
+tpu=Tensor Processing Unit
+bco=Budget Connectors
+bgc=Shielded Connectors
+cap=Electric Field Capacitor
+hcc=High Capacity Connectors
+ldi=Laser Diode
+mfk=Medium Fastener Kit
+mwf=Medium Wafer
+sfk=Small Fastener Kit
+swf=Small Wafer
+trn=Advanced Transistor
+cc=Climate Controller
+cru=Cryogenic Unit
+ffc=FTL Field Controller
+lis=Life Support System
+tac=Targeting Computer
+wr=Water Reclaimer
+be=Beryllium
+c=Carbon
+ca=Calcium
+cl=Chlorine
+es=Einsteinium
+i=Iodine
+na=Sodium
+ta=Tantalum
+tc=Technetium
+w=Wolfram
+zr=Zirconium
+ff=FTL Fuel
+sf=STL Fuel
+ar=Argon
+f=Fluorine
+h=Hydrogen
+he=Helium
+he3=Helium 3 Isotope
+n=Nitrogen
+ne=Neon
+o=Oxygen
+bts=Bacterial Tungsten Solution
+h2o=Water
+les=Liquid Einsteinium
+ale=Stellar Pale Ale
+cof=Caffeinated Infusion
+gin=Einsteinium-Infused Gin
+kom=Kombucha
+nst=NeuroStimulants
+pwo=Padded Work Overall
+rep=Repair Kit
+sc=Stem Cell Treatment
+vg=Vita Gel
+win=Smart Zinfandel
+al=Aluminium
+au=Gold
+cu=Copper
+fe=Iron
+si=Silicon
+stl=Steel
+ti=Titanium
+ber=Beryl Crystals
+cli=Caliche Rock
+gal=Galerite Rock
+hal=Halite Crystals
+lst=Limestone
+mag=Magnetite
+mg=Magnesium
+s=Sulfur
+tai=Tantalite
+tco=Technetium Oxide
+ts=Tectosilisite
+zir=Zircon Crystals
+alo=Aluminium Ore
+auo=Gold Ore
+cuo=Copper Ore
+feo=Iron Ore
+sio=Silicon Ore
+tio=Titanium Ore
+dcl=Durable Casing L
+dcm=Durable Casing M
+dcs=Durable Casing S
+pe=Poly-Ethylene
+pg=Polymer Granulate
+psl=Polymer Sheet Type L
+psm=Polymer Sheet Type M
+pss=Polymer Sheet Type S
+nv1=Navigation Module MK1
+nv2=Navigation Module MK1
+cnn=Convolutional Neural Network
+da=Data Analyzer
+dd=Distributed Database
+dv=Data Visualizer
+fnn=Feedforward Neural Network
+ld=Local Database
+nf=Networking Framework
+os=Operating System
+ra=Rating Algorithm
+rnn=Recurrent Neural Network
+sa=Search Algorithm
+sal=Sorting Algorithm
+snm=Spatial Navigation Map
 wai=weakArtificalIntelligence
-wm=windowManager
-cot=cottonProcessed
-kv=kevlar
-nl=nylon
-sil=silkProcessed
-tk=technoKevlar
+wm=Window Manager
+cot=Cotton Fabric
+kv=Kevlar Fabric
+nl=Nylon Fabric
+sil=Silken Fabric
+tk=TechnoKevlar Fabric
