raw items now come from recipes not miners

--- a/locale/en/pu-supply-chain.cfg
+++ b/locale/en/pu-supply-chain.cfg
@@ -137,7 +137,6 @@ tio=Titanium Ore deposit
 ts=Tectosilisite deposit
 zir=Zircon Crystals deposit
 
-
 [item-name]
 module-1=Miserable Workers
 module-2=Unmotivated Workers
@@ -356,3 +355,4 @@ kv=Kevlar Fabric
 nl=Nylon Fabric
 sil=Silken Fabric
 tk=TechnoKevlar Fabric
+amm=Ammonia
