setting up for market

--- a/locale/en/pu-supply-chain.cfg
+++ b/locale/en/pu-supply-chain.cfg
@@ -144,7 +144,7 @@ module-1=Miserable Workers
 module-2=Unmotivated Workers
 module-3=Content Workers
 module-4=Happy Workers
-module-5=Ecstatic
+module-5=Ecstatic Workers
 alg=Protein-Rich Algae
 bea=Protein-Rich Beans
 caf=Caffeinated Beans
@@ -350,7 +350,7 @@ rnn=Recurrent Neural Network
 sa=Search Algorithm
 sal=Sorting Algorithm
 snm=Spatial Navigation Map
-wai=weakArtificalIntelligence
+wai=Weak Artifical Intelligence
 wm=Window Manager
 cot=Cotton Fabric
 kv=Kevlar Fabric
