added filter inserter

--- a/locale/en/pu-supply-chain.cfg
+++ b/locale/en/pu-supply-chain.cfg
@@ -53,6 +53,7 @@ pu-transport-belt=Transport belt
 pu-underground-belt=Underground belt
 pu-splitter=Belt splitter
 pu-inserter=Inserter
+pu-inserter=Filter Inserter
 imp=Import Dock
 exp=Export Dock
 adm=Administration Center
