--- a/locale/en/pu-supply-chain.cfg
+++ b/locale/en/pu-supply-chain.cfg
@@ -5,13 +5,30 @@ removed-structure=Removed structure from colony
 build-core-module=Build a Core Module first
 too-far-from-colony=Too far from Core Module
 
+[wallet-gui]
+heading=Finances
+balance=Cash: [font=default-semibold]__1__[/font]
+market-update=Next market update in [font=default-semibold]__1__[/font] seconds
+open-prices=Open Prices
+close-prices=Close Prices
+
+[price-gui]
+heading=Supply and Demand
+item-name=Consumable
+price=Price
+demand=Demand
+supply=Supply
+in-supply=In supply?
+yes=yes
+no=no
+
 [maint-gui]
 heading=Colony Statistics
 item-name-header=Item
-item-cost-header=Quantity
+item-cost-header=Needed
 storage-header=Stored
-population=Population: __1__ / __2__ / __3__ / __4__ / __5__
-happiness=Worker Satisfaction Level: __1__ / 5
+population=Population: [font=default-semibold] __1__ / __2__ / __3__ / __4__ / __5__ [/font]
+happiness=Worker Satisfaction Level: [font=default-semibold] __1__ / 5 [/font]
 
 [item-group-name]
 pu-structures=Colony Structures
