--- a/scenarios/market-madness/locale/en/scenario.cfg
+++ b/scenarios/market-madness/locale/en/scenario.cfg
@@ -1,4 +1,5 @@
-scenario-name=Market Madness
+scenario-name=First Settlement
+description=Build a series of inter-dependent colonies, alone or with friends. Carefully manage the needs of your colonists so that they work optimally. Don't expand too fast, otherwise your house of cards might come crashing down.\n\nNote: This is not an offical project of simulogics games, just a hobby fan project.  \n\nVisit www.prosperousuniverse.com to try the real game for yourself.
 
 [free-builder]
 welcome-message=You are free to build
@@ -7,7 +8,6 @@ value-notification=The factory now costs __1__ points
 [entity-name]
 logistic-chest-active-provider=Outgoing Tradedock
 logistic-chest-requester=Incoming Tradedock
-
 
 [entity-description]
 logistic-chest-active-provider=Items stored here can be sold on the market. Click 'Refresh' in your Market Settings window to change prices.
