added welcome screen

--- a/scenarios/market-madness/locale/en/scenario.cfg
+++ b/scenarios/market-madness/locale/en/scenario.cfg
@@ -12,3 +12,19 @@ logistic-chest-requester=Incoming Tradedock
 [entity-description]
 logistic-chest-active-provider=Items stored here can be sold on the market. Click 'Refresh' in your Market Settings window to change prices.
 logistic-chest-requester=Items can be requested from the market here. New items will only be purchased when sold out.
+
+[welcome-screen]
+heading=Welcome
+text-1=[font=default-semibold]Prosperous Universe[/font] is a space commodity trading and colony management game produced by Simulogics. This mod is fan project and homage to that game. Visit [color=blue]prosperousuniverse.com[/color] to play the actual game for free. All illustration, content and the Prosperous Universe logo are used with permission.
+text-2=You are playing the [font=default-semibold]Multi-colony game mode[/font] in which you will need to build multiple interdependent colonies to achieve the goal. If you have not yet played it, I recommend you play the Single-colony game mode, which acts as a tutorial and provides some intermediate goals.
+text-3=If you have not played Prosperous Universe before, there are some things that you will need to know which work differently to in Factorio. The most important one is that your [font=default-semibold]Core module[/font] [img=item/cm] consumes resources to keep its workers happy and productive. Dont worry, your worker force cannot die from your misaction.
+text-4=The most basic of these [font=default-semibold]Drinking Water[/font] [img=item/dw]. As long as you provide enough of this item, your colony will operate, although slowly. To increase production speed, provide a larger variety of items to your Core Module. A list of required items will be displayed after you start a colony.
+text-5=Production chains in Prosperous universe are more varied than in Factorio. Many items can be creased in multiple ways. use your crafting menu to find out which one is better for you.
+text-6=There are 5 tiers of Colonist. Your population will be displayed like this [font=default-semibold](120, 30, 0, 0, 0)[/font] with each number representing the amount of a single tier of colonist. Each tier of colonist has different items which it will need to be productive.
+text-7=I recommend playing with Alt-view enabled. Press the __CONTROL__show-info__ key while playing to toggle it.
+text-8=Finally, you will need to use the Import and Export Dock structures to bring items to your colony from the market.
+text-9=To start a new colony use the Real estate display which will appear in the top left of your screen, after you close this message.
+text-10=Good Luck.\nabregado
+confirm=Begin
+
+
