single player mode level builds

--- a/scenarios/multi-colony/locale/en/scenario.cfg
+++ b/scenarios/multi-colony/locale/en/scenario.cfg
@@ -1,4 +1,4 @@
-scenario-name=First Settlement
+scenario-name=Multi-colony mode
 description=Build a series of inter-dependent colonies, alone or with friends. Carefully manage the needs of your colonists so that they work optimally. Don't expand too fast, otherwise your house of cards might come crashing down.\n\nNote: This is not an offical project of simulogics games, just a hobby fan project.  \n\nVisit www.prosperousuniverse.com to try the real game for yourself.
 
 [free-builder]
