--- a/scenarios/single-colony/locale/en/scenario.cfg
+++ b/scenarios/single-colony/locale/en/scenario.cfg
@@ -1,5 +1,5 @@
-scenario-name=First Settlement
-description=Build a series of inter-dependent colonies, alone or with friends. Carefully manage the needs of your colonists so that they work optimally. Don't expand too fast, otherwise your house of cards might come crashing down.\n\nNote: This is not an offical project of simulogics games, just a hobby fan project.  \n\nVisit www.prosperousuniverse.com to try the real game for yourself.
+scenario-name=Single-colony mode
+description=Build a single self dependent colonies, alone or with friends. Carefully manage the needs of your colonists so that they work optimally. Don't expand too fast, otherwise your house of cards might come crashing down.\n\nNote: This is not an offical project of simulogics games, just a hobby fan project.  \n\nVisit www.prosperousuniverse.com to try the real game for yourself.
 
 [free-builder]
 welcome-message=You are free to build
