maintenance works for single colony mode

--- a/locale/en/pu-supply-chain.cfg
+++ b/locale/en/pu-supply-chain.cfg
@@ -24,6 +24,7 @@ no=no
 
 [maint-gui]
 heading=Colony Statistics
+market-update=Next maintenance update in [font=default-semibold]__1__[/font] seconds
 item-name-header=Item
 item-cost-header=Needed
 storage-header=Stored
