single colony scenario

--- a/scenarios/single-colony/locale/en/scenario.cfg
+++ b/scenarios/single-colony/locale/en/scenario.cfg
@@ -1,9 +1,18 @@
 scenario-name=Single-colony mode
 description=Build a single self dependent colonies, alone or with friends. Carefully manage the needs of your colonists so that they work optimally. Don't expand too fast, otherwise your house of cards might come crashing down.\n\nNote: This is not an offical project of simulogics games, just a hobby fan project.  \n\nVisit www.prosperousuniverse.com to try the real game for yourself.
 
+[flying-text]
+objective-compete=Objective Complete
+
 [free-builder]
 welcome-message=You are free to build
 value-notification=The factory now costs __1__ points
+
+[item-name]
+deconstruction-planner=Labor planner
+
+[item-description]
+deconstruction-planner=Marks structures to be disabled. Disabled structures do not consume items during a maintenance update.
 
 [entity-name]
 logistic-chest-active-provider=Outgoing Tradedock
@@ -15,16 +24,70 @@ logistic-chest-requester=Items can be requested from the market here. New items 
 
 [welcome-screen]
 heading=Welcome
-text-1=[font=default-semibold]Prosperous Universe[/font] is a space commodity trading and colony management game produced by Simulogics. This mod is fan project and homage to that game. Visit [color=blue]prosperousuniverse.com[/color] to play the actual game for free. All illustration, content and the Prosperous Universe logo are used with permission.
-text-2=You are playing the [font=default-semibold]Multi-colony game mode[/font] in which you will need to build multiple interdependent colonies to achieve the goal. If you have not yet played it, I recommend you play the Single-colony game mode, which acts as a tutorial and provides some intermediate goals.
-text-3=If you have not played Prosperous Universe before, there are some things that you will need to know which work differently to in Factorio. The most important one is that your [font=default-semibold]Core module[/font] [img=item/cm] consumes resources to keep its workers happy and productive. Dont worry, your worker force cannot die from your misaction.
-text-4=The most basic of these [font=default-semibold]Drinking Water[/font] [img=item/dw]. As long as you provide enough of this item, your colony will operate, although slowly. To increase production speed, provide a larger variety of items to your Core Module. A list of required items will be displayed after you start a colony.
-text-5=Production chains in Prosperous universe are more varied than in Factorio. Many items can be creased in multiple ways. use your crafting menu to find out which one is better for you.
-text-6=There are 5 tiers of Colonist. Your population will be displayed like this [font=default-semibold](120, 30, 0, 0, 0)[/font] with each number representing the amount of a single tier of colonist. Each tier of colonist has different items which it will need to be productive.
-text-7=I recommend playing with Alt-view enabled. Press the __CONTROL__show-info__ key while playing to toggle it.
-text-8=Finally, you will need to use the Import and Export Dock structures to bring items to your colony from the market.
-text-9=To start a new colony use the Real estate display which will appear in the top left of your screen, after you close this message.
-text-10=Good Luck.\nabregado
+text-1=You are playing the [font=default-semibold]Single-colony game mode[/font]. This is a quest driven scenario to guide you through the production chains. It is playable in single or multi player, so invite a friend to help.
+text-2=[font=default-semibold]Prosperous Universe[/font] is a space commodity trading and colony management game produced by Simulogics. This mod is fan project and homage to that game. Visit [color=blue]prosperousuniverse.com[/color] to play the actual game for free. All illustration, content and the Prosperous Universe logo are used with permission.
+text-3=If you have not played Prosperous Universe before, there are some things that you will need to know which work differently to in Factorio. These are shown as you play in the Hints section of your Objective overview.
+text-4=Production chains in Prosperous universe are more varied than in Factorio. Many items can be creased in multiple ways. use your crafting menu to find out which one is better for you.
+text-5=I recommend playing with Alt-view enabled. Press the __CONTROL__show-info__ key while playing to toggle it.
+text-6=To start a new colony press the Begin button below.
+text-7=Good Luck.\nabregado
 confirm=Begin
 
+[quest-setup-colony]
+heading=At the center of every colony is the Core Module. Place one and fill it with some basic supplies.
+build-cm=Build a Core module
+cm-contains-dw=Put Drinking Water in the Core Module
+cm-contains-rat=Put Basic Rations in the Core Module
+
+[quest-stockpile-basics]
+heading=This colony needs to be self sufficient. Create more basic consumables.
+stockpile-dw=Stockpile more Drinking Water
+stockpile-rat=Stockpile more Basic Rations
+
+[quest-stockpile-construction]
+heading=To grow this colony we will need a lot of construction materials.
+stockpile-bbh=Stockpile Basic Bulkheads
+stockpile-bse=Stockpile Basic Structural Elements
+stockpile-bta=Stockpile Basic Transparent Apertures
+stockpile-bde=Stockpile Basic Deck Elements
+stockpile-mcg=Stockpile Mineral Construction Granulate
+
+[quest-stockpile-settler-equipment]
+heading=We will need a more advanced workforce to complete our mission.
+stockpile-tru=Stockpile Trusses
+stockpile-exo=Stockpile Exoskeleton Work Suits
+stockpile-pt=Stockpile Power Tools
+
+[quest-build-spacedock]
+heading=Next we need to build and launch an orbital platform to begin our true work.
+stockpile-ng=Stockpile Nano-coated Glass
+stockpile-bgc=Stockpile Shielded Connectors
+stockpile-dcl=Stockpile Durable Casing L
+stockpile-dcm=Stockpile Durable Casing M
+stockpile-sf=Stockpile STL Fuel
+
+[quest-build-ftl-ship]
+heading=The final work, required to found the next colony on the frontier.
+stockpile-nv1=Stockpile Navigation Module 1
+stockpile-nv2=Stockpile Navigation Module 2
+stockpile-cc=Stockpile Climate Controllers
+stockpile-cru=Stockpile Cryogenic Units
+stockpile-ffc=Stockpile FTL Field Controller
+stockpile-lis=Stockpile Life Support Systems
+stockpile-tac=Stockpile Targeting Computers
+stockpile-wr=Stockpile Water Reclaimers
+stockpile-sf=Stockpile STL Fuel
+stockpile-ff=Stockpile FTL Fuel
+
+[hints]
+heading=Hints
+no-building-until-core-module=You cannot add structures to a colony until it has a Core Module.
+consumables-taken-from-core-module=Supplies for your colonists will be taken from its Core Module.
+structures-disabled-until-upkeep=Newly placed buildings are disabled until the start of the next maintenance update.
+removing-structures-refunds=Picking up a structure will refund its ingredients.
+logistics-are-free=Belts, inserters and other logistics items are free.
+disabled-buildings=If you run out of Drinking Water, your structures will be disabled and marked with a red cross.disabled.
+deconstruction-planner=Use the Labor planner item to activate and deactivate your structures without deleting them. Shift + Left click to reactivate a structure. Reactivated structures will begin working after the next maintenance update.
+use-the-same-structure=Unlike in Factorio, it is not expected that you have one structure for each recipe. Manually change recipes when you have enough of an item stored.
+higher-tier-colonist-needs=More advanced workers need more complex items to work effectively.
 
